<resources>
    <string name="app_name">GKUDE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">首页</string>
    <string name="title_entity_link">实体链接</string>
    <string name="title_chat">知识问答</string>
    <string name="title_user">我</string>
    <string name="query_hint">请输入…</string>
    <string name="share_activity_title">分享到微博</string>
    <string name="share_activity_button">一键分享</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_question_here">输入问题</string>
    <string name="send_question">发送</string>
    <string name="dashboard_input_text">输入待识别文本</string>
    <string name="button_recognize">一键识别</string>
    <string name="robot_avatar">robot_avatar</string>
    <string name="username">用户名</string>
    <string name="updatePassword">更新密码</string>
    <string name="favorite">我的收藏</string>
    <string name="history">历史记录</string>
    <string name="right_arrow">right_arrow</string>
    <string name="icon">icon</string>
    <string name="submit">submit</string>
    <string name="cancelShare">取消分享</string>
    <string name="myFavorite">我的收藏</string>
    <string name="myHistory">历史记录</string>
    <string name="wrongProblem">错题本</string>
    <string name="logout">退出登录</string>
</resources>