<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shareActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:text="@string/share_activity_title"
        android:textAppearance="@style/TextAppearance.ExpandedTitle"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/shareActivityText"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <TextView
        android:id="@+id/shareActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignTop="@+id/shareActivityTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="230dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelShareActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="30dp"
            android:text="@string/cancelShare" />

        <Button
            android:id="@+id/shareActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="30dp"
            android:text="@string/share_activity_button" />
    </LinearLayout>
</RelativeLayout>