<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.UserFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/images_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/images_head"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/card_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/updatePassword"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/card_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/myFavorite"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/card_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/browse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/myHistory"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrongProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/card_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/complete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/wrongProblem"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="?attr/colorPrimary"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>
